--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".truckMenu"></activity>
+        <activity android:name=".ContactDevelopers"></activity>
+        <activity android:name=".truckMenu" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".Profile" />
         <activity android:name=".MainActivity">
