--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".ContactDevelopers" />
         <activity android:name=".truckMenu" />
         <activity android:name=".Profile" />
-        <activity android:name=".HomeActivity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".HomeActivityJava" android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
