--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-auth:17.0.0"
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation "com.karumi:dexter:5.0.0"
+    implementation 'com.karumi:dexter:6.0.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
