--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <activity android:name=".ContactDevelopers" />
-        <activity android:name=".truckMenu" />
+        <activity android:name=".TruckMenuActivity" />
         <activity android:name=".Profile" />
         <activity android:name=".HomeActivityJava" android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".MainActivity">
