--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".VendorOptionsActivity"></activity>
+        <activity android:name=".FavoritesActivity"></activity>
+        <activity android:name=".VendorOptionsActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
