--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,8 @@
         <activity android:name=".Notifications" />
         <activity
             android:name=".HomeActivityJava"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity">
+            android:theme="@style/AppTheme.NoActionBar" >
+<!--        <activity android:name=".MainActivity" />-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
