--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".FavoritesActivity"></activity>
+        <activity android:name=".ScannedBarcodeActivity"></activity>
+        <activity android:name=".QR" />
+        <activity android:name=".FavoritesActivity" />
         <activity android:name=".VendorOptionsActivity" />
 
         <meta-data
