launch uri button works

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,17 @@
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="barcode" />
 
+<!--        <provider-->
+<!--            android:authorities="${applicationId}.provider"-->
+<!--            android:name="android.support.v4.content.FileProvider"-->
+<!--            android:exported="false"-->
+<!--            android:grantUriPermissions="true">-->
+<!--            <meta-data-->
+<!--                android:name="android.support.FILE_PROVIDER_PATHS"-->
+<!--                android:resource="@xml/provider_paths"/>-->
+<!--        </provider>-->
+
+
         <activity android:name=".ContactDevelopers" />
         <activity android:name=".TruckMenuActivity" />
         <activity android:name=".Profile" />
