--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ContactDevelopers" />
         <activity android:name=".TruckMenuActivity" />
         <activity android:name=".Profile" />
+        <activity android:name=".SeeTrucksActivity"/>
         <activity android:name=".Notifications" />
         <activity
             android:name=".HomeActivityJava"
