--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".EditMenuInterface"/>
         <activity android:name=".SearchActivity"/>
         <activity android:name=".VendorOptionsActivity" />
+        <activity android:name=".AddMenuItemActivity"/>
         <activity android:name=".Emaildev"/>
 
         <meta-data
